<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtMostrar"
        android:layout_width="336dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@color/fondoMostrar"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textColor="@color/txtMostrar"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="381dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="702dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="335dp"
        android:layout_height="330dp"
        android:layout_marginTop="36dp"
        app:columnCount="5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtMostrar"
        app:rowCount="5">

        <Button
            android:id="@+id/btn1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero1"
            android:textAlignment="center"
            app:cornerRadius="500dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero2"
            android:textAlignment="center"
            app:cornerRadius="500dp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero3"
            android:textAlignment="center"
            app:cornerRadius="500dp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMas"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/fondoBotonesOperaciones"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonMas"
            android:textAlignment="center"
            app:cornerRadius="10dp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/fondoBotonesOperaciones"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonMenos"
            android:textAlignment="center"
            app:cornerRadius="10dp"
            app:layout_column="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero4"
            app:cornerRadius="200dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero6"
            app:cornerRadius="200dp" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesOperaciones"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonMultiplicacion"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesOperaciones"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonDivision"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero9" />

        <Button
            android:id="@+id/btnRoot"
            android:layout_width="55dp"
            android:layout_height="122dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/botonesRootInv"
            android:text="@string/botonRoot"
            android:textAlignment="center"
            android:textSize="10sp"
            app:cornerRadius="10dp"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btnInv"
            android:layout_width="55dp"
            android:layout_height="122dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/botonesRootInv"
            android:text="@string/botonInv"
            android:textAlignment="center"
            android:textSize="10sp"
            app:cornerRadius="10dp"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/numero0" />

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonPunto" />

        <Button
            android:id="@+id/btnMasMenos"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/fondoBotonesOperaciones"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonMasMenos"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/fondoBotonesNumeros"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/botonIgual"
            app:layout_columnSpan="3" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/botonesAC"
            android:text="@string/botonBorrar"
            app:cornerRadius="10dp"
            app:layout_columnSpan="2" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>